--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,8 @@
     width: 100%;
     height: 50px;
     background-color: var(--navbar-bgcolor);
+    display: flex;
+    justify-content: space-between;
 }
 .navigation-section .menu-container{
     width: 35%;
@@ -30,6 +32,7 @@
 .menu-container .nav-menu li a{
     text-decoration: none;
     color: white;
+    display: inline-block;
 }
 .dropdown{
     list-style: none;
@@ -48,4 +51,23 @@
 }
 .nav-menu li:hover .dropdown{
     display: block;
+}
+.navigation-section .mode-container{
+    width: 7.5%;
+    height: 70%;
+    background-color: black;
+    opacity: 0.4;
+    margin-right: 20px;
+    border-radius: var(--border-radius);
+    margin-top: 8px;
+    color: white;
+    font-family: var(--main-font);
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    justify-content: center;
+}
+.mode-container:hover{
+    cursor: pointer;
+    opacity: 1;
 }
