--- a/styles/main.css
+++ b/styles/main.css
@@ -43,6 +43,7 @@
     margin-left: -20px;
     display: none;
     background-color: var(--navbar-bgcolor);
+    z-index: 1;
 }
 .dropdown li {
     display: block;
@@ -120,4 +121,22 @@
     border-radius: var(--border-radius);
     background-color: #d8d8dac7;
     padding-left: 10px;
+}
+.hero-container{
+    width: 98%;
+    height: 75vh;
+    background-color: black;
+    margin: 20px auto;
+    border-radius: var(--border-radius);
+    position: relative;
+    overflow: hidden;
+}
+.hero-container::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-image: url('/images/Hero-Image-Size.png');
+    opacity: 0.2;
+    top: 0;
 }
